mount landing page, add top nav and intro section snippets, add dashboard page

--- a/src/index.css
+++ b/src/index.css
@@ -1604,7 +1604,7 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 *******************************/
 
 /*******************************
-            Top Nav
+            Top Nav MAIN
 *******************************/
 
 .nav-menu--top {
@@ -1665,6 +1665,11 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  cursor: pointer;
+}
+
+.top-nav-section--right .top-nav-item:hover {
+  background: rgba(0, 0, 0, 0.08);
 }
 
 .sub-nav {
@@ -1677,6 +1682,22 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
   transition: 0.3s top;
   top: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  margin: auto;
+}
+
+.sub-nav .icon-button--close-to-sub-nav {
+  position: absolute;
+  right: 12px;
+  cursor: pointer;
+}
+
+.sub-nav .sub-nav-item {
+  cursor: pointer;
+  padding: 0 12px;
+}
+
+.sub-nav .sub-nav-item:hover {
+  background: rgba(0, 0, 0, 0.08);
 }
 
 @media (max-width: 768px) {
@@ -1687,6 +1708,27 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 
 .sub-nav.open {
   top: 60px;
+}
+
+/*******************************
+        Top Nav LANDING
+*******************************/
+
+.top-nav--landing {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  background: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.top-nav--landing .top-nav-section--left,
+.top-nav--landing .top-nav-section--right {
+  background: inherit;
 }
 
 /*******************************
@@ -1844,8 +1886,34 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
         Standard
 ---------------------*/
 
-.wrapper--page {
+.wrapper--page-with-top-nav {
   padding-top: calc(72px);
+}
+
+/*******************************
+          Landing Page
+*******************************/
+
+.section--landing-page--intro {
+  color: white;
+  background-image: url('/blue-gradient-bg.png');
+  min-height: 840px;
+  max-height: 960px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+}
+
+.section--landing-page--intro .section-bg-container {
+  background: tomato;
+  position: absolute;
+  top: 0;
+  right: -10%;
+  bottom: 0;
+  left: -10%;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 100%;
+  z-index: 2;
 }
 /*******************************
             Theme
