--- a/src/styles/src/definitions/elements/button.less
+++ b/src/styles/src/definitions/elements/button.less
@@ -21,6 +21,74 @@
             Button
 *******************************/
 
+button {
+  cursor: pointer;
+  color: black;
+  min-height: 2em;
+  border-radius: 0.28571429rem;
+  outline: none;
+  border: none;
+  vertical-align: baseline;
+  box-shadow: 0px 0px 0px 1px transparent inset,
+    0px 0em 0px 0px rgba(35,36,38,0.15) inset;
+  font-style: normal;
+  text-align: center;
+  user-select: none;
+  padding: @verticalPadding @horizontalPadding;
+}
+
+.button--color--primary {
+  background: @primaryColor;
+  &:hover {
+    background: darken(@primaryColor, 10%);
+  }
+  &:focus {
+    background: @primaryColor;
+    border: 2px solid white;
+    outline: 1px solid @primaryColor;
+  }
+}
+
+.button--color--secondary {
+  background: white;
+  color: black;
+  border: 1px solid @primaryColor;
+  &:hover {
+    background: @primaryColor;
+  }
+  &:focus {
+    background: @primaryColor;
+    border: 2px solid white;
+    outline: 1px solid @primaryColor;
+  }
+}
+
+.button--ghost {
+  background: white;
+  color: @primaryColor;
+  &:hover {
+    background: @primaryColor;
+    color: white;
+  }
+  &:focus {
+    background: @primaryColor;
+    color: white;
+    border: 2px solid white;
+    outline: 1px solid @primaryColor;
+  }
+}
+
+.button--remove {
+  background: white;
+  color: @primaryColor;
+  border: 1px solid @primaryColor;
+}
+.button--add {
+  background: white;
+  color: @primaryColor;
+  border: 1px solid @primaryColor;
+}
+
 .ui.button {
   cursor: pointer;
   display: inline-block;
@@ -197,11 +265,7 @@
       Disabled
 --------------------*/
 
-.ui.buttons .disabled.button,
-.ui.disabled.button,
-.ui.button:disabled,
-.ui.disabled.button:hover,
-.ui.disabled.active.button {
+.disabled {
   cursor: default;
   opacity: @disabledOpacity !important;
   background-image: none !important;
