--- a/src/styles/src/definitions/elements/button.less
+++ b/src/styles/src/definitions/elements/button.less
@@ -37,31 +37,56 @@ button {
   padding: @verticalPadding @horizontalPadding;
 }
 
-.button--color--primary {
-  background: @primaryColor;
-  &:hover {
-    background: darken(@primaryColor, 10%);
+/*******************************
+Colored Buttons
+*******************************/
+
+.create-unstyled-button(@name, @color) {
+  .button--@{name}--unstyled--white {
+    background: white;
+    color: @color;
+    border: 1px solid @color;
   }
-  &:focus {
-    background: @primaryColor;
-    border: 2px solid white;
-    outline: 1px solid @primaryColor;
+  .button--@{name}--unstyled {
+    background: @color;
+    color: white;
   }
 }
 
-.button--color--secondary {
-  background: white;
-  color: black;
-  border: 1px solid @primaryColor;
-  &:hover {
-    background: @primaryColor;
+.create-unstyled-button(primary, @primaryColor);
+
+.create-colored-button(@name, @color) {
+  .button--@{name}--color {
+    background: @color;
+    &:hover {
+      background: darken(@color, 10%);
+    }
+    &:focus {
+      background: @color;
+      border: 2px solid white;
+      outline: 1px solid @color;
+    }
   }
-  &:focus {
-    background: @primaryColor;
-    border: 2px solid white;
-    outline: 1px solid @primaryColor;
+  .button--@{name}--white {
+    background: white;
+    color: black;
+    border: 1px solid @color;
+    &:hover {
+      background: @color;
+    }
+    &:focus {
+      background: @color;
+      border: 2px solid white;
+      outline: 1px solid @color;
+    }
   }
 }
+
+.create-colored-button(primary, @primaryColor);
+
+/*******************************
+Specialty Buttons
+*******************************/
 
 .button--ghost {
   background: white;
